# simple-webserver-template

./: .env.example  Cargo.toml  clean_git_history.sh
src/: main.rs
