[package]
name = "simple-webserver-template"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenvy = "0.15.7"
log = "0.4.27"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.22", features = ["json"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
anyhow = "1.0.98"
regex = "1.11.1"
once_cell = "1.21.3"
tempfile = "3.20.0"
env_logger = "0.11.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
